Wed Mar 23 14:56:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/tests/Event/Mcast/Simple/consumer.cpp:
          Added this file, it seems I forgot it to add it some years ago

        * orbsvcs/tests/Event/Mcast/Simple/Simple.mpc:
          Do build the consumer

Wed Mar 23 14:20:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PortableServer/RequestProcessingStrategyDefaultServant.cpp:
        * tao/PortableServer/RequestProcessingStrategyServantActivator.cpp:
        * tao/PortableServer/RequestProcessingStrategyServantLocator.cpp:
          Added missing ACE_CHECK_RETURN in locate_servant()

Tue Mar 22 15:42:00 2005  Gary Maxey  <gary.maxey@hp.com>

        * orbsvcs/orbsvcs/Shutdown_Utilities.cpp

          For Tandem NSK platform do not emit warning for failing
          to register handler for signal 10.  Signal 10 does not
          exist on that platform.

Tue Mar 22 10:00:32 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* orbsvcs/orbsvcs/RTCORBAEvent.mpc:

	  Removed stray inheritance from naming, removed idlflags
	  definition (as there are no IDL files for this project).

Mon Mar 21 09:28:35 2005  Chad Elliott  <elliott_c@ociweb.com>

        * orbsvcs/orbsvcs/Naming/Storable_Naming_Context.cpp:

          Modified ACE_THROW to be ACE_THROW_RETURN to support
          non-exceptions builds.

Mon Mar 21 07:58:47 2005  Chad Elliott  <elliott_c@ociweb.com>

        * examples/RTScheduling/DT_Creator.h:
        * examples/RTScheduling/DT_Creator.cpp:

          Added a constructor for this class as it has many pointers that
          need initialization.

        * examples/RTScheduling/Fixed_Priority_Scheduler/FP_Scheduler.cpp:
        * examples/RTScheduling/Job_i.h:
        * examples/RTScheduling/MIF_Scheduler/MIF_Scheduler.cpp:
        * examples/RTScheduling/Thread_Task.h:
        * tao/RTScheduling/Current.cpp:
        * tao/RTScheduling/Request_Interceptor.cpp: